kubernetes/other/airflow-load-balancer.yml
apiVersion: v1
kind: Service
metadata:
  generateName: airflow-web-
  labels:
    app: airflow
    tier: web
  name: airflow-web-5f2v4
spec:
  clusterIP: 10.3.240.188
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 32286
    port: 5601
    protocol: TCP
    targetPort: 5601
  selector:
    app: airflow
    tier: web
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip:
